feat: Update new UI merchant page

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -41,7 +41,7 @@
         <span class="mb-1">
             <h6>Password</h6>
             <p-password
-                class="inputtext w-100 mt-1 form-control"
+                class="inputtext w-100 mt-1"
                 [toggleMask]="true"
                 formControlName="userPassword"
                 (focus)="clearErrorNotification()"
