--- a/src/app/components/user-pages/shop-view/shop-view.component.less
+++ b/src/app/components/user-pages/shop-view/shop-view.component.less
@@ -2,10 +2,11 @@
     padding-left: 32px;
     .shopView-filter {
         margin-top: 16px;
-
         border-radius: 20px;
         border: solid 1px #c5c5c5;
         height: fit-content;
+        background-color: #fff;
+
         .search-bar {
             input {
                 background-color: rgb(228, 230, 235);
