--- a/src/styles.scss
+++ b/src/styles.scss
@@ -20,8 +20,11 @@ $gutter: 1rem; //for primeflex grid system
         border-radius: 7px;
         height: 40px;
     }
-    .p-password input {
-        border: solid 1px #fff;
+    input {
+        border: solid 1px #fff !important;
+    }
+    .p-password > .p-inputtext {
+        border: none !important;
     }
 }
 
