--- a/src/app/components/user-pages/user-profile/user-profile.component.html
+++ b/src/app/components/user-pages/user-profile/user-profile.component.html
@@ -52,6 +52,7 @@
                                     class="w-100 rounded-2 p-2 mb-3"
                                     type="text"
                                     placeholder="Username"
+                                    pInputText
                                     formControlName="userEmail"
                                 />
                             </div>
@@ -63,6 +64,7 @@
                                     type="email"
                                     class="w-100 rounded-2 p-2 mb-3"
                                     id="input-email"
+                                    pInputText
                                     formControlName="userFirstName"
                                 />
                             </div>
@@ -74,6 +76,7 @@
                                     type="email"
                                     class="w-100 rounded-2 p-2 mb-3"
                                     id="input-email"
+                                    pInputText
                                     formControlName="userLastName"
                                 />
                             </div>
@@ -88,6 +91,7 @@
                                     pattern="[0-9]+"
                                     minlength="10"
                                     maxlength="11"
+                                    pInputText
                                     class="w-100 rounded-2 p-2 mb-3"
                                     placeholder="Enter your Phone number"
                                     formControlName="userPhoneNumber"
@@ -101,6 +105,7 @@
                                     type="text"
                                     pattern="[0-9]+"
                                     minlength="10"
+                                    pInputText
                                     maxlength="11"
                                     class="w-100 rounded-2 p-2 mb-3"
                                     formControlName="memberPoint"
