--- a/src/app/layout/app.topbar.component.html
+++ b/src/app/layout/app.topbar.component.html
@@ -1,6 +1,6 @@
 <div class="layout-topbar">
     <a class="layout-topbar-logo" routerLink="">
-        <img src="/assets/logo.png" alt="logo" />
+        <app-logo></app-logo>
     </a>
 
     <button
