--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,15 +3,9 @@
 $gutter: 1rem; //for primeflex grid system
 @import "assets/layout/styles/layout/layout.scss";
 
-/* PrimeNG */
 @import "../node_modules/primeng/resources/primeng.min.css";
 @import "../node_modules/primeflex/primeflex.scss";
 @import "../node_modules/primeicons/primeicons.css";
-
-/* Demos */
-@import "assets/demo/styles/flags/flags.css";
-@import "assets/demo/styles/badges.scss";
-@import "assets/demo/styles/code.scss";
 
 ::ng-deep {
     .p-password,
@@ -39,4 +33,8 @@ $gutter: 1rem; //for primeflex grid system
     &:active {
         background-color: #ff9b00 !important;
     }
+}
+
+.w-fit {
+    width: fit-content;
 }
