--- a/src/app/components/merchant-pages/live/live.component.html
+++ b/src/app/components/merchant-pages/live/live.component.html
@@ -1,7 +1,15 @@
 <div class="grid">
     <div class="col-12">
         <div class="card px-6 py-6">
-            <div class="col-12 xl:col-6">Live</div>
+            <div class="col-12 xl:col-6">
+                <input
+                    type="file"
+                    accept="image/*"
+                    capture="camera"
+                    id="photo"
+                />
+                <label for="photo"> Open Camera </label>
+            </div>
             <div class="col-12 xl:col-6">Shop</div>
         </div>
     </div>
