--- a/src/app/components/shared/product-card/product-card.component.html
+++ b/src/app/components/shared/product-card/product-card.component.html
@@ -1,31 +1,52 @@
-<div class="card m-2" (click)="onCardClick()">
+<div *ngIf="!isLoading; else loading" class="card m-2" (click)="onCardClick()">
     <img
+        class="img"
         src="{{
             product.images
                 ? product.images[0]
                 : 'https://via.placeholder.com/320x300'
         }}"
     />
-    <div class="card-content w-100 d-flex flex-column p-3">
-        <h5 class="product-name clamp mb-0">{{ product?.name }}</h5>
-        <!-- <p class="product-des">
+    <div
+        class="card-content w-100 d-flex flex-column p-3 justify-content-between"
+    >
+        <span>
+            <h5 class="product-name clamp mb-0">{{ product?.name }}</h5>
+            <!-- <p class="product-des">
       {{ product?.description }}
     </p> -->
-        <p class="product-des clamp mt-0 mb-1" style="font-size: 0.85rem">
-            {{ product?.subCategory?.category?.name }}
-        </p>
-        <div *ngIf="!viewOnly" class="product-rating">
-            <p-rating
-                [(ngModel)]="product.avgRating"
-                [readonly]="true"
-                [cancel]="false"
-            ></p-rating>
-        </div>
+            <p class="product-des clamp mt-0 mb-1" style="font-size: 0.85rem">
+                {{ product?.subCategory?.category?.name }}
+            </p>
+            <div *ngIf="!viewOnly" class="product-rating">
+                <p-rating
+                    [(ngModel)]="product.avgRating"
+                    [readonly]="true"
+                    [cancel]="false"
+                ></p-rating>
+            </div>
+        </span>
+
         <p
             *ngIf="!viewOnly"
-            class="mt-2 mb-0 product-price d-flex justify-content-between"
+            class="mb-0 product-price d-flex justify-content-between"
         >
             {{ product?.price.toLocaleString() }} VND
         </p>
     </div>
 </div>
+
+<ng-template #loading>
+    <div class="card m-2">
+        <p-skeleton class="img" height="200px"></p-skeleton>
+        <p-skeleton
+            class="card-content w-100 d-flex flex-column p-3"
+            height="3rem"
+        >
+        </p-skeleton>
+        <p-skeleton class="w-100 px-3 py-2"></p-skeleton>
+        <p-skeleton class="w-100 px-3 py-2"></p-skeleton>
+        <p-skeleton class="w-100 px-3 py-2"></p-skeleton>
+        <p-skeleton> </p-skeleton>
+    </div>
+</ng-template>
