--- a/src/app/components/shared/product-card/product-card.component.less
+++ b/src/app/components/shared/product-card/product-card.component.less
@@ -10,6 +10,7 @@
     align-items: flex-start;
     display: inline-flex;
     max-width: 200px;
+    min-width: 160px;
     height: 360px;
     border-radius: 8px;
     box-shadow: 2px 5px 2px 0px rgba(0, 0, 0, 0.12);
@@ -20,7 +21,7 @@
         -webkit-box-shadow: 7px 10px 5px 0px rgba(0, 0, 0, 0.12);
         -moz-box-shadow: 7px 10px 5px 0px rgba(0, 0, 0, 0.12);
     }
-    img {
+    .img {
         align-self: stretch;
         height: 200px;
         width: 200px;
@@ -34,7 +35,14 @@
             font-weight: 700;
         }
     }
-
+    &-content {
+        height: 160px;
+        max-height: 160px;
+    }
+    .product-price {
+        font-size: 18px;
+        font-weight: 600;
+    }
     .clamp {
         display: -webkit-box;
         -webkit-box-orient: vertical;
