--- a/src/app/components/user-pages/merchant-request/merchant-request.component.html
+++ b/src/app/components/user-pages/merchant-request/merchant-request.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid row">
-    <div class="col-sm-1 col-md-3"></div>
-    <div class="col-sm-10 col-md-6">
+    <div class="col-sm-1 col-md-2"></div>
+    <div class="col-sm-10 col-md-8">
         <form
             class="bg-white w-100"
             id="form-container"
@@ -23,44 +23,47 @@
             </div>
 
             <div class="input-textbox d-flex justify-content-center w-100">
-                <span class="p-float-label m-4 my-2 w-100">
-                    <h6>Tên trại cứu trợ</h6>
+                <span class="m-4 my-2 w-100">
+                    <h6 class="mb-1">Shop Name</h6>
                     <input
-                        class="inputtext ps-1 w-100"
-                        id="float-input"
+                        class="w-100 rounded-2 p-2 mb-3"
+                        pInputText
                         type="text"
                         formControlName="shelterName"
                     />
                 </span>
             </div>
             <div class="input-textbox d-flex justify-content-center w-100">
-                <span class="p-float-label m-4 my-2 w-100">
-                    <h6>Facebook</h6>
+                <span class="m-4 my-2 w-100">
+                    <h6 class="mb-1">Shop Description</h6>
                     <input
-                        class="inputtext ps-1 w-100"
-                        id="float-input"
+                        class="w-100 rounded-2 p-2 mb-3"
                         type="text"
+                        pInputText
                         formControlName="shelterFacebookUrl"
                     />
                 </span>
             </div>
             <div class="input-textbox d-flex justify-content-start w-100">
-                <span class="p-float-label ms-4 mt-2">
-                    <h6>Địa chỉ</h6>
+                <span class="ms-4 mt-2">
+                    <h6 class="mb-1">Address</h6>
                 </span>
             </div>
             <div class="d-flex justify-content-start w-100">
                 <div class="address-container m-4 my-2 w-100">
-                    <span class="p-float-label">
-                        <h6 class="addressLabel p-1 ps-0">Số nhà, tên đường</h6>
+                    <span class="">
+                        <h6 class="mb-1" class="addressLabel p-1 ps-0">
+                            Address
+                        </h6>
                         <input
-                            class="inputtext ps-1 w-100"
+                            class="w-100 rounded-2 p-2 mb-3"
                             type="text"
+                            pInputText
                             formControlName="shelterNo"
                         />
                     </span>
-                    <span class="p-float-label">
-                        <h6 class="addressLabel p-1 ps-0">Thành phố/Tỉnh</h6>
+                    <span class="">
+                        <h6 class="mb-1" class="addressLabel p-1 ps-0">City</h6>
                         <p-dropdown
                             [options]="listProvince"
                             [filter]="true"
@@ -82,8 +85,10 @@
              </ng-template> -->
                         </p-dropdown>
                     </span>
-                    <span class="p-float-label">
-                        <h6 class="addressLabel p-1 ps-0">Quận/Huyện</h6>
+                    <span class="">
+                        <h6 class="mb-1" class="addressLabel p-1 ps-0">
+                            District
+                        </h6>
                         <p-dropdown
                             [filter]="true"
                             [autoDisplayFirst]="false"
@@ -95,8 +100,8 @@
                         >
                         </p-dropdown>
                     </span>
-                    <span class="p-float-label">
-                        <h6 class="addressLabel p-1 ps-0">Phường/Xã</h6>
+                    <span class="">
+                        <h6 class="mb-1" class="addressLabel p-1 ps-0">Ward</h6>
                         <p-dropdown
                             [options]="listWard"
                             [autoDisplayFirst]="false"
@@ -109,27 +114,23 @@
                 </div>
             </div>
             <div class="input-textbox d-flex justify-content-center w-100">
-                <span class="p-float-label m-4 my-2 w-100">
-                    <h6>Số điện thoại</h6>
+                <span class="m-4 my-2 w-100">
+                    <h6 class="mb-1">Phone Number</h6>
                     <input
-                        class="inputtext ps-1 w-100"
-                        id="float-input"
-                        type="number"
+                        class="w-100 rounded-2 p-2 mb-3"
+                        type="text"
+                        pInputText
                         formControlName="shelterPhoneNum"
                     />
                 </span>
             </div>
-            <h6 class="ms-4 mt-4">
-                Giấy phép hoạt động và các giấy tờ có liên quan khác
-            </h6>
+            <h6 class="mb-1" class="ms-4 mt-4">Business document</h6>
             <div class="d-flex justify-content-center w-100">
                 <p-fileUpload
                     name="file[]"
                     (onSelect)="onSelectFiles($event)"
                     class="w-100 m-4 my-1"
                     name="demo[]"
-                    chooseLabel="Chọn ảnh"
-                    cancelLabel="Huỷ bỏ"
                     [multiple]="true"
                     [maxFileSize]="10000000"
                     [showUploadButton]="false"
@@ -144,11 +145,11 @@
                 </p-fileUpload>
             </div>
 
-            <h6 class="ms-4 addressLabel">
+            <!-- <h6 class="mb-1" class="ms-4 addressLabel">
                 Sau khi đăng ký bạn vui lòng đợi từ 3-5 ngày để chúng tôi có thể
                 xác thực các thông tin mà bạn đã cung cấp. Kết quả sẽ được gửi
                 đến mail của người đại diện.
-            </h6>
+            </h6> -->
 
             <div class="btn-container d-flex justify-content-center pt-4 mb-4">
                 <button
@@ -157,11 +158,10 @@
                     [disabled]="requestForm.invalid"
                     (click)="upload($event)"
                 >
-                    Gửi yêu cầu
+                    Enroll
                 </button>
             </div>
         </form>
     </div>
-    <div class="col-sm-1 col-md-3"></div>
+    <div class="col-sm-1 col-md-2"></div>
 </div>
-<p-toast key="message"></p-toast>
