--- a/src/app/components/user-pages/merchant-request/merchant-request.component.scss
+++ b/src/app/components/user-pages/merchant-request/merchant-request.component.scss
@@ -1,20 +1,10 @@
-:host ::ng-deep {
-    display: block;
-}
-
 * {
     padding: 0;
     margin: 0;
 }
 #form-container {
-    min-width: 300px;
-}
-.inputtext {
-    height: 40px;
-}
-.inputtext {
-    // width: 40vw;
-    border-radius: 7px;
+    max-width: 600px;
+    width: 100%;
 }
 
 #imgInput {
@@ -27,12 +17,10 @@
 :host ::ng-deep {
     .p-dropdown {
         width: 100%;
-        border: solid 2px;
-        border-radius: 7px;
     }
-    .p-dropdown,
-    input {
-        border: solid 1px;
+
+    .p-dropdown.p-component {
+        height: 36.6px !important;
     }
 
     .p-fileupload {
@@ -51,9 +39,6 @@
             border: none;
             border-radius: 7px;
         }
-    }
-    .p-inputtext {
-        border: none;
     }
 }
 
