--- a/src/app/components/user-pages/product-detail/product-detail.component.html
+++ b/src/app/components/user-pages/product-detail/product-detail.component.html
@@ -11,36 +11,13 @@
     Store > {{ product.subCategory.category.name }} >
     {{ product.subCategory.name }}
 </p>
-<div class="container p-4" *ngIf="!isLoading">
-    <div class="info d-flex gap-4 mb-4">
-        <!-- <p-galleria
-      [value]="product?.images"
-      [showItemNavigatorsOnHover]="true"
-      [showItemNavigators]="true"
-      [containerStyle]="{ 'max-width': '640px', 'min-height': '500px' }"
-    >
-      <ng-template pTemplate="item" let-item>
-        <img
-          [src]="item"
-          style="
-            width: 80%;
-            display: block;
-            padding-bottom: 10px;
-            min-height: 300px;
-            object-fit: cover;
-            border-radius: 5px;
-          "
-        />
-      </ng-template>
-      <ng-template pTemplate="thumbnail" let-item>
-        <div class="grid grid-nogutter justify-content-center">
-          <img [src]="item" class="h-100" style="display: block; width: 20%" />
-        </div>
-      </ng-template>
-    </p-galleria> -->
-        <app-product-image [images]="product.images"></app-product-image>
-
-        <div class="product-info col-5">
+<div class="container-fluid p-4" *ngIf="!isLoading">
+    <div class="row">
+        <app-product-image
+            class="col-xl-7 order-xl-1"
+            [images]="product.images"
+        ></app-product-image>
+        <div class="product-info col-xl-5 order-xl-2">
             <div class="basic-info ps-4">
                 <div class="product-name d-flex">
                     <h1 class="py-2 mb-0">{{ product?.name }}</h1>
@@ -53,7 +30,7 @@
                     ></p-rating>
                 </div>
 
-                <h5 class="mt-2">{{ attPrice | currency : "USD" }}</h5>
+                <h5 class="mt-2">{{ attPrice | number : "1.0-0" }} VND</h5>
                 <p>
                     This is for description. This is for description. This is
                     for description. This is for description. This is for
@@ -211,7 +188,7 @@
     </div> -->
 
     <section class="section my-4 product" id="shop" aria-label="product">
-        <div class="container mx-auto">
+        <div class="container-fluid mx-auto">
             <h4 class="h4 section-title">Best Seller</h4>
 
             <ul class="grid-list d-flex gap-4">
@@ -256,7 +233,7 @@
         </div>
     </section>
     <section class="section my-4 product" id="shop" aria-label="product">
-        <div class="container mx-auto">
+        <div class="container-fluid mx-auto">
             <h4 class="h4 section-title">Most View</h4>
 
             <ul class="grid-list d-flex gap-4">
@@ -296,5 +273,3 @@
         </div>
     </section>
 </div>
-
-<p-toast key="toast"></p-toast>
