--- a/src/app/components/user-pages/shop-view/shop-view.component.html
+++ b/src/app/components/user-pages/shop-view/shop-view.component.html
@@ -1,55 +1,3 @@
-<!-- <div class="newArrival">
-  <div class="newArrival-title">New Arrival</div>
-  <div class="newArrival-carousel">
-    <div class="card">
-      <p-carousel
-        [value]="products"
-        [numVisible]="3"
-        [numScroll]="3"
-        [circular]="true"
-        [responsiveOptions]="responsiveOptions"
-        [autoplayInterval]="3000"
-      >
-        <ng-template let-product pTemplate="item">
-          <div
-            class="border-1 surface-border border-round m-2 text-center py-5 px-3"
-          >
-            <div class="mb-3">
-              <img
-                src="https://primefaces.org/cdn/primeng/images/demo/product/{{
-                  product.image
-                }}"
-                [alt]="product.name"
-                class="w-6 shadow-2"
-              />
-            </div>
-            <div>
-              <h4 class="mb-1">{{ product.name }}</h4>
-              <h6 class="mt-0 mb-3">{{ "$" + product.price }}</h6>
-              <p-tag
-                [value]="product.inventoryStatus"
-                [severity]="getSeverity(product.inventoryStatus)"
-              ></p-tag>
-              <div class="car-buttons mt-5">
-                <p-button
-                  type="button"
-                  styleClass="p-button p-button-rounded mr-2"
-                  icon="pi pi-search"
-                ></p-button>
-                <p-button
-                  type="button"
-                  styleClass="p-button-success p-button-rounded mr-2"
-                  icon="pi pi-star-fill"
-                ></p-button>
-              </div>
-            </div>
-          </div>
-        </ng-template>
-      </p-carousel>
-    </div>
-  </div>
-</div> -->
-
 <div class="shopView d-flex">
     <div class="shopView-filter col-sm-6 col-md-2">
         <div class="side-filter d-flex flex-column p-2">
@@ -144,10 +92,17 @@
           />
         </span>
       </ng-template> -->
-
-        <app-product-card
-            *ngFor="let product of products"
-            [product]="product"
-        ></app-product-card>
+        <span *ngIf="!isLoading; else loading" class="w-100 shopView-list">
+            <app-product-card
+                *ngFor="let product of products"
+                [product]="product"
+            ></app-product-card>
+        </span>
+        <ng-template #loading
+            ><app-product-card
+                *ngFor="let _ of [].constructor(20)"
+                [isLoading]="true"
+            ></app-product-card>
+        </ng-template>
     </div>
 </div>
