--- a/src/app/components/user-pages/shop-view/shop-view.component.scss
+++ b/src/app/components/user-pages/shop-view/shop-view.component.scss
@@ -48,8 +48,10 @@
     display: flex;
     flex-wrap: wrap;
     gap: 16px;
+    height: fit-content;
     .product {
         width: clamp(150px, 25%, 225px);
+        height: fit-content;
     }
 }
 
